update variable name from rebase with 8.0/edge

--- a/snap/hooks/install
+++ b/snap/hooks/install
@@ -49,4 +49,4 @@ chown -R 584788:root $SNAP_COMMON/*
 chown 584788:584788 $MYSQL_ROUTER_ETC
 chown 584788:584788 $MYSQL_ROUTER_VAR_LIB
 chown 584788:584788 $MYSQL_ROUTER_VAR_LOG
-chown 584788:584788 $MYSQL_ROUTER_VAR_RUN
+chown 584788:584788 $MYSQL_ROUTER_RUN
