Move mysqlsh logs to `/var/log/mysqlsh`

--- a/snap/hooks/install
+++ b/snap/hooks/install
@@ -15,6 +15,8 @@ MYSQL_ROUTER_VAR_LIB=$SNAP_COMMON/var/lib/mysqlrouter
 MYSQL_ROUTER_VAR_LOG=$SNAP_COMMON/var/log/mysqlrouter
 MYSQL_ROUTER_RUN=$SNAP_COMMON/run/mysqlrouter
 
+MYSQL_SHELL_VAR_LOG=$SNAP_COMMON/var/log/mysqlsh
+
 # Creating all the needed directories
 mkdir -p $MYSQL_ETC
 mkdir -p $MYSQL_VAR_LIB
@@ -25,6 +27,8 @@ mkdir -p $MYSQL_ROUTER_ETC
 mkdir -p $MYSQL_ROUTER_VAR_LIB
 mkdir -p $MYSQL_ROUTER_VAR_LOG
 mkdir -p $MYSQL_ROUTER_RUN
+
+mkdir -p $MYSQL_SHELL_VAR_LOG
 
 # Copy over mysql config file
 cp -r $SNAP/etc/mysql $SNAP_DATA/etc/
@@ -50,3 +54,4 @@ chown 584788:584788 $MYSQL_ROUTER_ETC
 chown 584788:584788 $MYSQL_ROUTER_VAR_LIB
 chown 584788:584788 $MYSQL_ROUTER_VAR_LOG
 chown 584788:584788 $MYSQL_ROUTER_RUN
+chown 584788:584788 $MYSQL_SHELL_VAR_LOG
