--- a/snap/hooks/install
+++ b/snap/hooks/install
@@ -16,7 +16,7 @@ MYSQL_ROUTER_VAR_LOG=$SNAP_COMMON/var/log/mysqlrouter
 MYSQL_ROUTER_RUN=$SNAP_COMMON/run/mysqlrouter
 
 MYSQL_SHELL_VAR_LOG=$SNAP_COMMON/var/log/mysqlsh
-SNAP_DAEMON_HOME=$SNAP_DATA/home/snap_daemon
+MYSQL_SHELL_USER_CONFIG=/tmp/mysqlsh
 
 # Creating all the needed directories
 mkdir -p $MYSQL_ETC
@@ -30,7 +30,7 @@ mkdir -p $MYSQL_ROUTER_VAR_LOG
 mkdir -p $MYSQL_ROUTER_RUN
 
 mkdir -p $MYSQL_SHELL_VAR_LOG
-mkdir -p $SNAP_DAEMON_HOME
+mkdir -p $MYSQL_SHELL_USER_CONFIG
 
 # Copy over mysql config file
 cp -r $SNAP/etc/mysql $SNAP_DATA/etc/
@@ -57,4 +57,4 @@ chown 584788:584788 $MYSQL_ROUTER_VAR_LIB
 chown 584788:584788 $MYSQL_ROUTER_VAR_LOG
 chown 584788:584788 $MYSQL_ROUTER_RUN
 chown 584788:584788 $MYSQL_SHELL_VAR_LOG
-chown 584788:584788 $SNAP_DAEMON_HOME
+chown 584788:584788 $MYSQL_SHELL_USER_CONFIG
